--- a/configure.ac
+++ b/configure.ac
@@ -166,6 +166,7 @@ guardian/Makefile
 plugins/Makefile
 plugins/syslog/Makefile
 tests/Makefile
+tests/libguardian/Makefile
 tests/plugins/Makefile
 ])
 
