--- a/tests/libguardian/Makefile.am
+++ b/tests/libguardian/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = defs $(TESTS)
+EXTRA_DIST = $(TESTS)
 
 TESTS = \
     timezone.test
@@ -9,3 +9,6 @@ check_PROGRAMS = libguardian-helper
 libguardian_helper_LDADD = \
     $(top_builddir)/libguardian/libguardian-$(LIBGUARDIAN_VERSION_API).la \
     $(PCRE_LIBS)
+
+INCLUDES = \
+    -I$(top_srcdir)
