--- a/tests/plugins/Makefile.am
+++ b/tests/plugins/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = defs $(TESTS)
+EXTRA_DIST = $(TESTS)
 
 TESTS = \
     missing-plugin.test \
@@ -10,3 +10,6 @@ check_PROGRAMS = plugin-loader
 plugin_loader_LDADD = \
     $(top_builddir)/libguardian/libguardian-$(LIBGUARDIAN_VERSION_API).la \
     $(PCRE_LIBS)
+
+INCLUDES = \
+    -I$(top_srcdir)
