Use AX_PTHREAD macro from autoconf archive

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ config.sub
 configure
 install-sh
 ltmain.sh
-m4/
 missing
 po/Makefile.in.in
 po/POTFILES
@@ -35,3 +34,9 @@ tests/libguardian/libguardian-helper
 tests/libguardian/*.log
 tests/plugins/plugin-loader
 tests/plugins/*.log
+m4/libtool.m4
+m4/ltversion.m4
+m4/ltsugar.m4
+m4/ltoptions.m4
+m4/lt~obsolete.m4
+m4/intltool.m4
