--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = po libguardian guardian plugins tests docs data
+SUBDIRS = po libguardian guardiand plugins tests docs data
 
 ACLOCAL_AMFLAGS = -I m4
