Fix FreeBSD build

--- a/libguardian/Makefile.am
+++ b/libguardian/Makefile.am
@@ -38,6 +38,7 @@ libguardian_1_0_la_CFLAGS =               \
     $(PTHREAD_CFLAGS) \
     $(PCRE_CFLAGS) \
     $(OPENSSL_CFLAGS) \
+    -std=c99 \
     -DLIBGUARDIAN_COMPILATION
 
 libguardian_1_0_la_LDFLAGS =              \
@@ -49,8 +50,7 @@ libguardian_1_0_la_LDFLAGS =              \
 libguardian_1_0_la_LIBADD = \
     $(OPENSSL_LIBS) \
     $(PCRE_LIBS) \
-    $(PTHREAD_LIBS) \
-    -ldl
+    $(PTHREAD_LIBS)
 
 INCLUDES = \
     -I$(top_srcdir)
