--- a/plugins/syslog/Makefile.am
+++ b/plugins/syslog/Makefile.am
@@ -13,5 +13,9 @@ syslog_la_LDFLAGS =   \
     -module              \
     $(PLATFORM_LDFLAGS)
 
+syslog_la_CFLAGS =   \
+    $(PCRE_CFLAGS) \
+    -std=c99
+
 INCLUDES = \
     -I$(top_srcdir)
