--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ compiler:
   - gcc
 
 before_install:
+ - sudo add-apt-repository zeromq
  - sudo apt-get update -qq
  - sudo apt-get install intltool
+ - sudo apt-get install zeromq3
  - sh autogen.sh
 
 script: ./configure && make && make check
