--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 
 before_install:
- - sudo add-apt-repository zeromq
+ - sudo add-apt-repository ppa:zeromq
  - sudo apt-get update -qq
  - sudo apt-get install intltool
  - sudo apt-get install zeromq3
