Cleanup some code
 - Replace INCLUDES with AM_CPPFLAGS in Makefile.am
 - Rewrite main loop to loop around ZMQ Poll()
 - Resolve compile warnings

--- a/guardiand/Makefile.am
+++ b/guardiand/Makefile.am
@@ -28,5 +28,5 @@ guardiand_CFLAGS = \
 guardiand_DEPENDENCIES = \
     $(top_builddir)/libguardian/libguardian-$(LIBGUARDIAN_VERSION_API).la
 
-INCLUDES = \
+AM_CPPFLAGS = \
     -I$(top_srcdir)
