--- a/tests/plugins/Makefile.am
+++ b/tests/plugins/Makefile.am
@@ -10,7 +10,13 @@ check_PROGRAMS = plugin-loader
 
 plugin_loader_LDADD = \
     $(top_builddir)/libguardian/libguardian-$(LIBGUARDIAN_VERSION_API).la \
+    $(ZMQ_LIBS) \
     $(PCRE_LIBS)
 
-INCLUDES = \
+plugin_loader_CFLAGS = \
+    $(PCRE_CFLAGS) \
+    $(ZMQ_CFLAGS) \
+    -Wall
+
+AM_CPPFLAGS = \
     -I$(top_srcdir)
