Add file object for log-file abstraction

--- a/libguardian/Makefile.am
+++ b/libguardian/Makefile.am
@@ -9,6 +9,7 @@ libguardian_1_0_la_SOURCES = \
     memory.c \
     assert.c \
     time.c \
+    file.c \
     log.c \
     error.c \
     source.c \
@@ -22,6 +23,7 @@ libguardian_1_0_la_SOURCES = \
 libguardian_include_HEADERS = \
     memory.h \
     assert.h \
+    file.h \
     log.h \
     time.h \
     types.h \
