Rename syslog plugin to syslog-plugin
 - Add timestamp code to libguardian
 - rename httpd plugin to httpd-plugin

--- a/configure.ac
+++ b/configure.ac
@@ -184,8 +184,8 @@ guardiand/Makefile
 guardian/Makefile
 data/Makefile
 plugins/Makefile
-plugins/syslog/Makefile
-plugins/httpd/Makefile
+plugins/syslog-plugin/Makefile
+plugins/httpd-plugin/Makefile
 tests/Makefile
 tests/libguardian/Makefile
 tests/plugins/Makefile
