Add timeframe dialog
 - Rename search-window to search-dialog
 - Hide cursor
 - Don't draw slider in main window when showing popup.

--- a/guardian/Makefile.am
+++ b/guardian/Makefile.am
@@ -2,7 +2,8 @@ bin_PROGRAMS = guardian
 
 guardian_SOURCES = \
     guardian.c \
-    search_window.c
+    search_dialog.c \
+    timeframe_dialog.c
 
 guardian_LDADD = \
     $(PCRE_LIBS) \
