Add man page for libguardian

--- a/configure.ac
+++ b/configure.ac
@@ -215,6 +215,7 @@ docs/Makefile
 docs/man/Makefile
 docs/man/guardian.1
 docs/man/guardiand.1
+docs/man/libguardian.3
 docs/man/guardian.conf.5
 docs/libguardian/Makefile
 ])
