--- a/docs/man/Makefile.am
+++ b/docs/man/Makefile.am
@@ -1,2 +1,9 @@
-dist_man1_MANS = guardian.1 guardiand.1
-dist_man5_MANS = guardian.conf.5
+dist_man1_MANS = \
+	guardian.1   \
+	guardiand.1
+
+dist_man3_MANS = \
+	libguardian.3
+
+dist_man5_MANS = \
+	guardian.conf.5
