--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ missing
 test-driver
 docs/man/guardian.1
 docs/man/guardiand.1
+docs/man/libguardian.3
 docs/man/guardian.conf.5
 po/Makefile.in.in
 po/POTFILES
