--- a/docs/man/guardian.conf.5.in
+++ b/docs/man/guardian.conf.5.in
@@ -25,3 +25,8 @@ Network port used for listing for commands specified by guardian-agent.
 listen_address
 Network address used for listing for commands specified by guardian-agent.
 (Default: 127.0.0.1)
+.SH SEE ALSO
+.
+.BR guardian  (1),
+.BR guardiand (1),
+.BR libgurardian (3)
