--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install intltool
  - sudo apt-get install libzmq3-dev 
+ - sudo apt-get install libedit-dev 
  - sh autogen.sh
 
 script: ./configure && make && make check
