--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,8 @@
-SUBDIRS = libguardian plugins
+SUBDIRS = \
+    libguardian \
+    guardian \
+    guardiand \
+    plugins
 
 #
 #EXTRA_DIST = defs $(TESTS)
