Fix make distcheck

--- a/tests/guardian/Makefile.am
+++ b/tests/guardian/Makefile.am
@@ -1,6 +1,10 @@
 EXTRA_DIST = $(TESTS)
 
 TESTS = \
-    style.test
+    style.sh
+
+TEST_EXTENSIONS = .sh
+SH_LOG_COMPILER = $(SH)
+AM_TESTS_ENVIRONMENT = SOURCE_DIR='$(top_srcdir)'; export SOURCE_DIR;
 
 XFAIL_TESTS =
