--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,3 +1,6 @@
 SUBDIRS= \
-    system-plugin \
-	generator-plugin
+    system-plugin
+
+if WITH_GENERATOR_PLUGIN
+	SUBDIRS += generator-plugin
+endif
